--- a/css/components/pop-up.css
+++ b/css/components/pop-up.css
@@ -111,6 +111,11 @@
 
 @media screen and (max-width: 740px) {
 
+  .rules-spies-img {
+    width: 6rem;
+    height: auto;
+  }
+
     .pop-up-intelligencer,
   .pop-up-field-agent {
     background-color: rgba(0, 0, 0, 0.6);
@@ -122,7 +127,10 @@
   .pop-up-intelligencer-content,
   .pop-up-field-agent-content {
     width: 85vw;
-    height: 80vh;
+    height: 75vh;
+    position: fixed; 
+    top: 5vh;
+
   }
 
   .pop-up-intelligencer-content h2,
