--- a/css/components/pop-up.css
+++ b/css/components/pop-up.css
@@ -56,7 +56,7 @@
     );
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 60vw;
   height: 70vh;
@@ -70,7 +70,7 @@
 .pop-up-field-agent p::after{
   content: "|";
   opacity: 1;
-  margin-left: 3px;
+  margin-left: 4px;
   animation: blink-rules .7s infinite;
   
 }
