--- a/css/components/pop-up.css
+++ b/css/components/pop-up.css
@@ -42,7 +42,7 @@
 }
 .pop-up-intelligencer p,
 .pop-up-field-agent p {
-  font-size: 2.1rem;
+  font-size: 2rem;
   color: #29abef;
 }
 
@@ -95,7 +95,7 @@
   display: inline-block;
   font-size: 20px;
   font-weight: 900;
-  margin: 10px 20px 10px;
+  margin: 0px 0px 70px 0px;
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 1px 1px 5px #259ddd;
@@ -126,8 +126,8 @@
   .pop-up-intelligencer-content,
   .pop-up-intelligencer-content,
   .pop-up-field-agent-content {
-    width: 85vw;
-    height: 75vh;
+    width: 80vw;
+    height: 70vh;
     position: fixed; 
     top: 5vh;
 
@@ -135,11 +135,13 @@
 
   .pop-up-intelligencer-content h2,
   .pop-up-field-agent-content h2 {
-    font-size: 2.6rem;
+    font-size: 2.5rem;
   }
   .pop-up-intelligencer p,
   .pop-up-field-agent p {
-    font-size: 1.7rem;
+    font-size: 2rem;
     color: #29abef;
+    padding: 0.3em;
+    height: 40vh;
   }
 }
